--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,10 @@ version: '3.8'
 services:
   technova:
     build: .
-    ports:
-      - "8000:8000"
     container_name: technova_ctf
+    ports:
+      - "8000:8000"  # Web interface
+      - "2222:22"    # SSH access
     volumes:
-      - .:/var/www/html
+      - .:/var/www/html  # Bind local project to container
+    tty: true            # Cho phép attach terminal (hữu ích khi debug)
